force-app/main/default/objects/AB_Test_Log__c/AB_Test_Log__c.object-meta.xml
<CustomObject>
    <label>A/B Test Log</label>
    <nameField>
        <displayFormat>AB-{00000000}</displayFormat>
        <label>自動採番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>