force-app/main/default/objects/AB_Test_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Click</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>