force-app/main/default/objects/AB_Test_Log__c/fields/Test_ID__c.field-meta.xml
<CustomField>
    <fullName>Test_ID__c</fullName>
    <inlineHelpText>テスト識別子</inlineHelpText>
    <label>Test ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>