force-app/main/default/objects/AB_Test_Log__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>外部ID / ユニーク(重複不可)</inlineHelpText>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>