force-app/main/default/objects/AB_Test_Log__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <inlineHelpText>Guest or Auth</inlineHelpText>
    <label>User Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>