force-app/main/default/objects/AB_Test_Log__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <inlineHelpText>A or B</inlineHelpText>
    <label>Variant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>