force-app/main/default/objects/AB_Test_Log__c/fields/Visitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Id__c</fullName>
    <inlineHelpText>ブラウザ識別ID</inlineHelpText>
    <label>Visitor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>