force-app/main/default/objects/AB_Test_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_ID__c</columns>
    <columns>Variant__c</columns>
    <columns>Action_Type__c</columns>
    <columns>User_Type__c</columns>
    <columns>Visitor_Id__c</columns>
    <columns>Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>